logs/rtt.20260405-134556.log
   Compiling apas-verus v0.1.0 (/home/milnes/projects/APAS-VERUS-agent1)
error[E0405]: cannot find trait `BSTSpecFns` in this scope
   --> src/Chap37/BSTAVLStEph.rs:190:53
    |
190 |     pub trait BSTAVLNodeFns<T: TotalOrder>: Sized + BSTSpecFns<T> + BalBinTreeTrait<T> {
    |                                                     ^^^^^^^^^^ not found in this scope
    |
help: consider importing this trait
    |
 23 +     use crate::Chap37::BSTPlainStEph::BSTPlainStEph::BSTSpecFns;
    |

error[E0405]: cannot find trait `BSTSpecFns` in this scope
   --> src/Chap37/BSTBBAlphaStEph.rs:161:57
    |
161 |     pub trait BSTBBAlphaNodeFns<T: TotalOrder>: Sized + BSTSpecFns<T> + BalBinTreeTrait<T> {
    |                                                         ^^^^^^^^^^ not found in this scope
    |
help: consider importing this trait
    |
 23 +     use crate::Chap37::BSTPlainStEph::BSTPlainStEph::BSTSpecFns;
    |

For more information about this error, try `rustc --explain E0405`.
error: could not compile `apas-verus` (lib) due to 2 previous errors
warning: build failed, waiting for other jobs to finish...
error: could not compile `apas-verus` (lib test) due to 2 previous errors
error: command `/home/milnes/.rustup/toolchains/1.94.0-x86_64-unknown-linux-gnu/bin/cargo test --no-run --message-format json-render-diagnostics --release` exited with code 101
Elapsed: 7s
